k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-next
  namespace: demo
spec:
  selector:
    app: demo-next
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
