k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-next
  namespace: demo
  annotations:
    kubernetes.io/ingress.class: haproxy
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-next
                port:
                  number: 80
